# esp_hdiffz

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  component.mk  flash-unit-test.sh  partition_table_unit_test_two_ota.csv  sdkconfig.defaults
include/: esp_hdiffz.h
main/: README.md  main.c
src/: file.c  miniz_plugin.c  miniz_plugin.h  ota.c  rw.c  rw.h
test/: common.c  common.h  test_file.c  test_hdiffz.c  test_ota.c
